# agda2scheme

./: .gitignore  README.md  agda2scheme.cabal
.github/workflows/: haskell.yml
src/: Main.hs
src/Agda/Compiler/: Erase.hs  ToScheme.hs
test/: Erasure.agda  Erasure.ss  First.agda  First.ss  Nats.agda  Nats.ss  Primitive.ss  Triples.agda  Triples.ss  TriplesFO.agda  formalize-all-the-things.agda  formalize-all-the-things.ss
