cabal-version:      2.4
name:               agda2scheme
version:            0.1.0.0
synopsis:           Agda backend for Chez Scheme
description:        -

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jesper Cockx
maintainer:         jesper@sikanda.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

executable agda2scheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Agda.Compiler.ToScheme

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                      , Agda >= 2.6.2.1 && < 2.6.3
                      , containers >= 0.5.7.1
                      , deepseq >= 1.4.5
                      , mtl >= 2.2.2
                      , pretty >= 1.1.3.3
                      , s-cargot >= 0.1.4
                      , text >= 1.2.3.1
    hs-source-dirs:   src
    default-language: Haskell2010

    default-extensions:  BlockArguments
                       , ConstraintKinds
                       , DefaultSignatures
                       , DeriveAnyClass
                       , DeriveFoldable
                       , DeriveFunctor
                       , DeriveGeneric
                       , DeriveTraversable
                       , ExistentialQuantification
                       , FlexibleContexts
                       , FlexibleInstances
                       , FunctionalDependencies
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , MultiParamTypeClasses
                       , MultiWayIf
                       , NamedFieldPuns
                       , OverloadedStrings
                       , PatternSynonyms
                       , RankNTypes
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TupleSections
                       , TypeSynonymInstances
